fix: label selection flyout menu, overflow

--- a/src/renderer/styles/app/partials/layout.less
+++ b/src/renderer/styles/app/partials/layout.less
@@ -293,7 +293,6 @@ html, body {
     background-color: @pageForeground;
     line-height: 50px;
     border-bottom: 1px solid @borderColor;
-    overflow: hidden !important;
 }
 .action.header > div {
   display: flex;
@@ -302,7 +301,6 @@ html, body {
 .action.header .actions.left {
   flex: 1 1 auto;
   min-width: 0;
-  overflow: hidden;
 }
 .action.header .actions.right {
   display: flex;
@@ -312,7 +310,6 @@ html, body {
   margin-left: 8px;
   flex: 0 0 auto;
   min-width: 0;
-  overflow: hidden;
 }
 .action.header .actions.right div.search {
   flex: 0 1 250px;
